@@ -1652,83 +1652,6 @@ $dbi->execute($create_table1);
 $dbi->insert({$key1 => 1, $key2 => 2}, table => $table1);
 is($dbi->select(table => $table1)->one->{$key1}, 1);
 
-test 'end_filter';
-$dbi = DBIx::Custom->connect;
-eval { $dbi->execute("drop table $table1") };
-$dbi->execute($create_table1);
-$dbi->insert({$key1 => 1, $key2 => 2}, table => $table1);
-$result = $dbi->select(table => $table1);
-$result->filter($key1 => sub { $_[0] * 2 }, $key2 => sub { $_[0] * 4 });
-$result->end_filter($key1 => sub { $_[0] * 3 }, $key2 => sub { $_[0] * 5 });
-$row = $result->fetch_one;
-is_deeply($row, [6, 40]);
-
-$dbi = DBIx::Custom->connect;
-eval { $dbi->execute("drop table $table1") };
-$dbi->execute($create_table1);
-$dbi->insert({$key1 => 1, $key2 => 2}, table => $table1);
-$result = $dbi->select(column => [$key1, $key1, $key2], table => $table1);
-$result->filter($key1 => sub { $_[0] * 2 }, $key2 => sub { $_[0] * 4 });
-$result->end_filter($key1 => sub { $_[0] * 3 }, $key2 => sub { $_[0] * 5 });
-$row = $result->fetch_one;
-is_deeply($row, [6, 6, 40]);
-
-$dbi = DBIx::Custom->connect;
-eval { $dbi->execute("drop table $table1") };
-$dbi->execute($create_table1);
-$dbi->insert({$key1 => 1, $key2 => 2}, table => $table1);
-$result = $dbi->select(table => $table1);
-$result->filter([$key1, $key2] => sub { $_[0] * 2 });
-$result->end_filter([[$key1, $key2] => sub { $_[0] * 3 }]);
-$row = $result->fetch_one;
-is_deeply($row, [6, 12]);
-
-$dbi = DBIx::Custom->connect;
-eval { $dbi->execute("drop table $table1") };
-$dbi->execute($create_table1);
-$dbi->insert({$key1 => 1, $key2 => 2}, table => $table1);
-$result = $dbi->select(table => $table1);
-$result->filter([[$key1, $key2] => sub { $_[0] * 2 }]);
-$result->end_filter([$key1, $key2] => sub { $_[0] * 3 });
-$row = $result->fetch_one;
-is_deeply($row, [6, 12]);
-
-$dbi->register_filter(five_times => sub { $_[0] * 5 });
-$result = $dbi->select(table => $table1);
-$result->filter($key1 => sub { $_[0] * 2 }, $key2 => sub { $_[0] * 4 });
-$result->end_filter({$key1 => sub { $_[0] * 3 }, $key2 => 'five_times' });
-$row = $result->one;
-is_deeply($row, {$key1 => 6, $key2 => 40});
-
-$dbi->register_filter(five_times => sub { $_[0] * 5 });
-$dbi->apply_filter($table1,
-  $key1 => {end => sub { $_[0] * 3 } },
-  $key2 => {end => 'five_times'}
-);
-$result = $dbi->select(table => $table1);
-$result->filter($key1 => sub { $_[0] * 2 }, $key2 => sub { $_[0] * 4 });
-$row = $result->one;
-is_deeply($row, {$key1 => 6, $key2 => 40}, 'apply_filter');
-
-$dbi->register_filter(five_times => sub { $_[0] * 5 });
-$dbi->apply_filter($table1,
-  $key1 => {end => sub { $_[0] * 3 } },
-  $key2 => {end => 'five_times'}
-);
-$result = $dbi->select(table => $table1);
-$result->filter($key1 => sub { $_[0] * 2 }, $key2 => sub { $_[0] * 4 });
-$result->filter($key1 => undef);
-$result->end_filter($key1 => undef);
-$row = $result->one;
-is_deeply($row, {$key1 => 1, $key2 => 40}, 'apply_filter overwrite');
-
-$result = $dbi->select(column => [$key1, $key1, $key2], table => $table1);
-$result->filter($key1 => sub { $_[0] * 2 }, $key2 => sub { $_[0] * 4 });
-$result->filter($key1 => undef);
-$result->end_filter($key1 => undef);
-$row = $result->fetch;
-is_deeply($row, [1, 1, 40], 'apply_filter overwrite');
-
 test 'empty where select';
 $dbi = DBIx::Custom->connect;
 eval { $dbi->execute("drop table $table1") };
@@ -2085,8 +2008,6 @@ $dbi->execute($create_table1);
 $dbi->register_filter(one => sub { 1 });
 $result = $dbi->select(table => $table1);
 eval {$result->filter($key1 => 'no')};
-like($@, qr/not registered/);
-eval {$result->end_filter($key1 => 'no')};
 like($@, qr/not registered/);
 
 test 'option';
