@@ -16,6 +16,9 @@
   - remove DEPRECATED prepend method(DBIx::Custom::Order) array reference receiving
   - remove DEPRECATED remote_end_filter(DIBx::Custom::Result)
   - remote DEPRECATED remove_filter(DIBx::Custom::Result)
+  - remove DEPRECATED filter_on(DIBx::Custom::Result)
+  - remove DEPRECATED filter_off(DIBx::Custom::Result)
+  - remove DEPRECATED end_filter(DIBx::Custom::Result)
 
 
 0.37
